z-index button fix

--- a/css/character.css
+++ b/css/character.css
@@ -105,7 +105,7 @@
 	background: #0a141c;
 	/* opacity: 0.96; */
 	border-radius: 24px;
-	z-index: -1;
+	z-index: 1;
 }
 
 .div_stats .mod_bg
@@ -226,7 +226,7 @@
 	height: 38px;
 	border-radius: 50%;
 	/* animation: spin 30s linear infinite; */
-	z-index: -2;
+	z-index: 0;
 }
 
 .ring_button_icon
@@ -237,6 +237,7 @@
 	width: 38px;
 	height: 38px;
 	border-radius: 50%;
+	z-index: 1;
 	/* background-color: #14181c; */
 }
 .ring_button_helper_left
@@ -324,7 +325,7 @@
 	width: 39px;
 	height: 43px;
 	border-radius: 50%;
-	z-index: -1;
+	z-index: 1;
 }
 .position_ring_initiative input[type=text]
 {
@@ -852,7 +853,7 @@
 	width: 38px;
 	height: 38px;
 	border-radius: 50%;
-	z-index: -2;
+	z-index: 1;
 }
 
 .div_inventory
@@ -900,7 +901,7 @@
 	width: 38px;
 	height: 38px;
 	border-radius: 50%;
-	z-index: -2;
+	z-index: 1;
 }
 
 /* notes */
@@ -914,7 +915,7 @@
 	width: 38px;
 	height: 38px;
 	border-radius: 50%;
-	z-index: -2;
+	z-index: 1;
 }
 
 .div_notes
